--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "DadaData", 
+  "name": "DadaData",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "ejs": "^2.4.2",
     "express": "^4.14.0",
     "fs": "0.0.2",
-    "jsdom": "^9.4.1"
+    "jsdom": "^9.4.1",
+    "nodemon": "^1.11.0"
   }
 }
